## Process this file with automake to produce Makefile.in
EXTRA_DIST = adivtab.h anorm_dots.h anorms.h asm_draw.h asm_ia32.h \
	bspfile.h block16.h cdaudio.h chase.h client.h checksum.h cmd.h compat.h \
	conproc.h console.h context_x11.h crc.h cvar.h \
	dga_check.h d_iface.h d_ifacea.h d_local.h dosisms.h draw.h \
	gcc_attr.h gib_error.h gib.h gib_instructions.h \
	gib_interpret.h gib_modules.h gib_parse.h gib_stack.h  gib_vars.h glquake.h \
	gl_warp_sin.h host.h info.h input.h keys.h link.h mathlib.h mdfour.h \
	modelgen.h model.h mpdosock.h msg.h net_bw.h net_dgrm.h net.h \
	net_ipx.h net_loop.h net_mp.h net_ser.h net_udp.h net_vcr.h \
	net_wins.h net_wipx.h pr_comp.h progdefs.h progdefs.q1 \
	progdefs.q2 progs.h protocol.h qargs.h quakeasm.h qdefs.h \
	qendian.h qtypes.h quakefs.h quakeio.h render.h resource.h \
	r_local.h r_shared.h sbar.h screen.h server.h sizebuf.h \
	sound.h spritegn.h sys.h uint32.h va.h vgamodes.h vid_dos.h \
	vid.h view.h vregset.h wad.h winquake.h world.h zone.h \
	win32/fnmatch.h win32/version.h win32/version.h.in \
	win32/bc/borland.c win32/bc/config.h win32/vc/config.h
