## Process this file with automake to produce Makefile.in
EXTRA_DIST = adivtab.h anorm_dots.h anorms.h block16.h block8.h chase.h \
		client.h config.h.in conproc.h d_iface.h d_ifacea.h d_local.h \
		draw.h game.h gib.h gib_error.h gib_instructions.h gib_interpret.h \
		gib_modules.h gib_parse.h gib_stack.h gib_vars.h gl_warp_sin.h \
		glquake2.h host.h mpdosock.h net.h net_bw.h net_dgrm.h net_ipx.h \
		net_loop.h net_mp.h net_ser.h net_udp.h net_vcr.h net_wins.h \
		net_wipx.h progdefs.h progdefs.q1 progdefs.q2 protocol.h r_local.h \
		r_shared.h render.h resource.h server.h sv_pr_cmds.h sv_progs.h \
		world.h
